# mcp-servers

./: .gitignore  README.md  requirements.txt
clock/: server.py
ensemble-reasoning/: README.md  config.yaml  pyproject.toml  requirements.txt  server.py
ensemble-reasoning/modules/: models.py  tools.py  utils.py
federated-intelligence/: README.md  config.yaml  pyproject.toml  requirements.txt  server.py
federated-intelligence/modules/: clients.py  models.py  sessions.py  tools.py  utils.py
lateral-synthesis/: README.md  config.yaml  pyproject.toml  requirements.txt  server.py
lateral-synthesis/data/: concepts.json
lateral-synthesis/modules/: __init__.py  divergence.py  models.py  persistence.py  tools.py
utils/: __init__.py
