[project]
name = "ensemble-reasoning"
version = "1.0.0"
description = "Collaborative reasoning MCP server with multiple agent lenses"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.6.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
ensemble-reasoning = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
