[project]
name = "lateral-synthesis"
version = "1.0.0"
description = "Lateral thinking MCP server that injects divergent concepts"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.6.0",
    "wonderwords>=2.2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
lateral-synthesis = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
